syntax = "proto3";
package pb;
option go_package = 'khoihm1/flight-booking-assignment/pb';

import "google/protobuf/timestamp.proto";

service FlightGrpc{
   rpc CreateFlight(GrpcCreateFlightRequest) returns (GrpcCreateFlightResponse){}
   rpc UpdateFlight(GrpcUpdateFlightRequest) returns (GrpcUpdateFlightResponse){}
}

message GrpcPingFlightGrpcRequest {
   string status = 1;
}

message GrpcPingFlightGrpcResponse {
   string status = 1;
}

message GrpcCreateFlightRequest{
   string origin_airport_code     =1;
   string destination_airport_code=2;
   google.protobuf.Timestamp departure_date_time  =3;   
   string booking_class          =4;
   string flight_number          =5;
   int32 flight_duration        =6;
   int32 seat_remaining         =7;
   string currency_code          =8;
   double price                  =9;
}

message GrpcCreateFlightResponse{
	int64 id=1;
	string create_by=2;
	google.protobuf.Timestamp create_at=3;
}       

message GrpcUpdateFlightRequest{
   int64	id                        =1;
   string origin_airport_code     =2;
   string destination_airport_code=3;
   google.protobuf.Timestamp departure_date_time  =4;   
   string booking_class          =5;
   string flight_number          =6;
   int32 flight_duration        =7;
   int32 seat_remaining         =8;
   string currency_code          =9;
   double price                  =10;
   bool	enabled                   =11;
}

message GrpcUpdateFlightResponse{
   int64 id=1;
   string	update_by                   =2;
   google.protobuf.Timestamp	update_at =3;
}

